# fs-viv-assessment

./: README.md
apis/: .gitignore  app.db  justfile  pyproject.toml
apis/app/: cli.py  main.py
apis/app/core/: database.py
apis/app/services/: ingestion_service.py
apis/tests/: test_ingestion_service.py
backend/: README.md  app.db  justfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: songs.py
backend/app/core/: database.py
backend/app/models/: songs.py
backend/app/repositories/: song_repository.py
ui/: README.md  package.json  pnpm-lock.yaml
ui/api/: index.ts
ui/app/: layout.tsx  page.tsx
ui/components/ui/: input.tsx
ui/feat/songs/: index.tsx  use-songs.ts
ui/feat/songs/components/: acoustic-profile.tsx  index.tsx  musical-specs.tsx  page-size-selector.tsx  pagination-controls.tsx  rating-stars.tsx  song-details-row.tsx  song-not-found.tsx  song-progress-bar.tsx  song-search.tsx  songs-table.tsx  structure-details.tsx  summary-stats.tsx  table-skeleton.tsx  track-header.tsx
ui/feat/songs/hooks/: index.tsx  use-song-rating-mutation.ts  use-song-search-query.ts  use-song-stats.ts  use-songs-pagination.ts  use-songs-query.ts  use-songs-search.ts
ui/lib/: utils.ts
ui/provider/: index.tsx
